k8s/resources/common/apps-metadata-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps-metadata-server
  labels:
    name: apps-metadata-server
    app.kubernetes.io/component: gridsuite-apache
spec:
  selector:
    matchLabels:
      name: apps-metadata-server
  template:
    metadata:
      labels:
        name: apps-metadata-server
    spec:
      containers:
        - name: main
          image: docker.io/gridsuite/httpd:1.0.0@sha256:e054963bc0bdb0df484ad59a40072f29b3ff921a9887aa041f005c87e5ba2890
          volumeMounts:
            - mountPath: /usr/local/apache2/htdocs/
              name: apps-metadata-server-configmap-volume
            - mountPath: /usr/local/apache2/conf/app-httpd.conf
              subPath: app-httpd.conf
              name: apps-metadata-server-httpdconf-configmap-volume
      volumes:
        - name: apps-metadata-server-configmap-volume
          configMap:
            name: apps-metadata-server-configmap
        - name: apps-metadata-server-httpdconf-configmap-volume
          configMap:
            name: apps-metadata-server-httpdconf-configmap
