k8s/resources/common/case-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: case-server
  labels:
    name: case-server
    version: "1"
    app.kubernetes.io/component: gridsuite-springboot
    gridsuite.org/springboot-with-database: "true"
    gridsuite.org/springboot-with-elasticsearch: "true"
    gridsuite.org/springboot-with-rabbitmq: "true"
  annotations:
    gridsuite.org/size: springboot-l
spec:
  selector:
    matchLabels:
      name: case-server
  template:
    metadata:
      labels:
        name: case-server
    spec:
      containers:
      - name: main
        image: docker.io/powsybl/case-server:latest
        volumeMounts:
        - mountPath: /config/specific
          name: case-server-configmap-specific-volume
      securityContext:
        fsGroup: 1000
      volumes:
        - name: case-server-configmap-specific-volume
          configMap:
            name: case-server-configmap-specific
