k8s/resources/common/default-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  labels:
    name: default-backend
    app.kubernetes.io/component: gridsuite-apache
spec:
  selector:
    matchLabels:
      name: default-backend
  template:
    metadata:
      labels:
        name: default-backend
    spec:
      containers:
        - name: main
          image: docker.io/gridsuite/httpd:1.0.0@sha256:e054963bc0bdb0df484ad59a40072f29b3ff921a9887aa041f005c87e5ba2890
          volumeMounts:
            - mountPath: /usr/local/apache2/htdocs/
              name: default-backend-htdocs-configmap-volume
            - mountPath: /usr/local/apache2/conf/app-httpd.conf
              subPath: app-httpd.conf
              name: default-backend-conf-configmap-volume
      volumes:
        - name: default-backend-htdocs-configmap-volume
          configMap:
            name: default-backend-htdocs-configmap
        - name: default-backend-conf-configmap-volume
          configMap:
            name: default-backend-conf-configmap
