k8s/resources/common/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    name: gateway
    version: "1"
    app.kubernetes.io/component: gridsuite-springboot
  annotations:
    gridsuite.org/cpu: cpu-xs
    gridsuite.org/memory: memory-xxs
spec:
  selector:
    matchLabels:
      name: gateway
  template:
    metadata:
      labels:
        name: gateway
    spec:
      containers:
      - name: main
        image: docker.io/gridsuite/gateway:latest
        volumeMounts:
        - mountPath: /config
          name: gateway-configmap-volume
        - mountPath: /config/specific
          name: gateway-configmap-specific-volume
      volumes:
        - name: gateway-configmap-volume
          configMap:
            name: gateway-configmap
        - name: gateway-configmap-specific-volume
          configMap:
            name: gateway-configmap-specific
