k8s/resources/common/network-conversion-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-conversion-server
  labels:
    name: network-conversion-server
    version: "1"
    app.kubernetes.io/component: gridsuite-springboot
    gridsuite.org/springboot-with-elasticsearch: "true"
    gridsuite.org/springboot-with-rabbitmq: "true"
    gridsuite.org/springboot-with-large-storage: "true"
    gridsuite.org/springboot-with-s3: "true"
annotations:
    gridsuite.org/cpu: cpu-xl
spec:
  selector:
    matchLabels:
      name: network-conversion-server
  template:
    metadata:
      labels:
        name: network-conversion-server
    spec:
      containers:
      - name: main
        image: docker.io/powsybl/network-conversion-server:latest
        resources:
            requests:
              memory: "4540Mi"
            limits:
              memory: "4540Mi"
        volumeMounts:
        - mountPath: /config/specific
          name: network-conversion-server-configmap-specific-volume
        - mountPath: /home/powsybl/.itools
          name: network-conversion-server-itools-configmap-volume
      volumes:
        - name: network-conversion-server-configmap-specific-volume
          configMap:
            name: network-conversion-server-configmap-specific
        - name: network-conversion-server-itools-configmap-volume
          configMap:
            name: network-conversion-server-itools-configmap
