k8s/resources/common/actions-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: actions-server
    app.kubernetes.io/component: gridsuite-apache
  name: actions-server
spec:
  selector:
    name: actions-server
