k8s/resources/common/apps-metadata-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: apps-metadata-server
    app.kubernetes.io/component: gridsuite-apache
  name: apps-metadata-server
spec:
  selector:
    name: apps-metadata-server
