k8s/resources/common/case-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: case-server
    app-prometheus-metrics: enabled
    app.kubernetes.io/component: gridsuite-springboot
  name: case-server
spec:
  selector:
    name: case-server
