k8s/resources/common/config-notification-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: config-notification-server
    app.kubernetes.io/component: gridsuite-springboot
  name: config-notification-server
spec:
  selector:
    name: config-notification-server
