k8s/resources/common/default-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: default-backend
    app.kubernetes.io/component: gridsuite-apache
  name: default-backend
spec:
  selector:
    name: default-backend
