k8s/resources/common/filter-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: filter-server
    app-prometheus-metrics: enabled
    app.kubernetes.io/component: gridsuite-springboot
  name: filter-server
spec:
  selector:
    name: filter-server
