k8s/resources/common/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: gateway
    app-prometheus-metrics: enabled
    app.kubernetes.io/component: gridsuite-springboot
  name: gateway
spec:
  selector:
    name: gateway
