k8s/resources/common/loadflow-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: loadflow-server
    app-prometheus-metrics: enabled
    app.kubernetes.io/component: gridsuite-springboot
  name: loadflow-server
spec:
  selector:
    name: loadflow-server
