k8s/resources/common/monitor-security-analysis-worker-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: monitor-security-analysis-worker-server
    app.kubernetes.io/component: gridsuite-springboot
  name: monitor-security-analysis-worker-server
spec:
  selector:
    name: monitor-security-analysis-worker-server
