k8s/resources/common/network-store-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: network-store-server
    app.kubernetes.io/component: gridsuite-springboot
  name: network-store-server
spec:
  selector:
    name: network-store-server
