k8s/resources/common/report-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: report-server
    app-prometheus-metrics: enabled
    app.kubernetes.io/component: gridsuite-springboot
  name: report-server
spec:
  selector:
    name: report-server
