k8s/resources/common/spreadsheet-config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: spreadsheet-config-server
    app.kubernetes.io/component: gridsuite-springboot
  name: spreadsheet-config-server
spec:
  selector:
    name: spreadsheet-config-server
