k8s/resources/common/user-identity-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: user-identity-server
    app.kubernetes.io/component: gridsuite-springboot
  name: user-identity-server
spec:
  selector:
    name: user-identity-server
